--- a/tentacles-main/platformio.ini
+++ b/tentacles-main/platformio.ini
@@ -8,11 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+;[env]
+;platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+;framework = arduino
+;board_build.core = earlephilhower
+;board_build.filesystem_size = 0.5m
+
 [env:pico]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+; platform = raspberrypi
+board_build.core = earlephilhower
+board_build.filesystem_size = 0.5m
 board = pico
 framework = arduino
 lib_deps = 
 	teemuatlut/TMCStepper@^0.7.3
 	https://github.com/Zitt/FastLED.git#rp2040
 	waspinator/AccelStepper@^1.61
+upload_port = COM16
